--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "course",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
+    "format": "lint-staged",
+    "start": "nodemon --inspect src/index.js",
+    "listen": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,10 +23,20 @@
     "url": "https://github.com/thanhtung10x/course/issues"
   },
   "homepage": "https://github.com/thanhtung10x/course#readme",
+  
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --write"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
+    "morgan": "^1.10.0",
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.13",
+    "prettier": "^2.4.1"
   }
 }
