--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "format": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "listen": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,6 +25,11 @@
   
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --write"
+  },
+  "husky": {
+    "hooks": {
+      "pppre-commit":"lint-staged"
+    }
   },
   "dependencies": {
     "express": "^4.17.1",
