--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "pppre-commit":"lint-staged"
+      "pre-commit":"lint-staged"
     }
   },
   "dependencies": {
