--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "format": "lint-staged",
     "prepare": "husky install",
     "start": "nodemon --inspect src/index.js",
     "listen": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
@@ -28,7 +29,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.4"
+    "express-handlebars": "^5.3.4",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.0.7",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "husky": "^7.0.2",
