--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "format": "lint-staged",
     "prepare": "husky install",
-    "start": "nodemon --inspect src/index.js",
+    "start": "node src/index.js",
     "listen": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
