--- a/package.json
+++ b/package.json
@@ -1,45 +1,53 @@
 {
-  "name": "course",
+  "name": "blog",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "format": "lint-staged",
-    "prepare": "husky install",
-    "start": "node src/index.js",
-    "listen": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
+    "beautiful": "lint-staged",
+    "start": "nodemon --inspect src/index.js",
+    "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thanhtung10x/course.git"
+    "url": "git+https://github.com/sondnpt00343/nodejs_blog.git"
   },
   "keywords": [
-    "course",
-    "tung"
+    "f8",
+    "blog",
+    "f8",
+    "nodejs",
+    "nodejs"
   ],
-  "author": "tungtt",
+  "author": "sondn",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/thanhtung10x/course/issues"
+    "url": "https://github.com/sondnpt00343/nodejs_blog/issues"
   },
-  "homepage": "https://github.com/thanhtung10x/course#readme",
+  "homepage": "https://github.com/sondnpt00343/nodejs_blog#readme",
   "lint-staged": {
-    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --write"
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.4",
+    "express-handlebars": "^5.1.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.0.7",
+    "mongoose": "^5.9.27",
+    "mongoose-delete": "^0.5.2",
     "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "morgan": "^1.10.0",
-    "node-sass": "^6.0.1",
-    "nodemon": "^2.0.13",
-    "prettier": "^2.4.1"
+    "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5"
   }
 }
