--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     }
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.27",
     "mongoose-delete": "^0.5.2",
